# fbjava

./: .gitignore  CMakeLists.txt  Makefile  README.md  bootstrap.bat  bootstrap.sh  copy-javadocs.sh  create-linux-tarball.sh  create-package.sh  gen-cmake.bat  gen-cmake.sh  run-maven.bat  run-maven.sh
.github/workflows/: build.yml
apidocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list
apidocs/org/firebirdsql/fbjava/: CallableRoutineContext.html  Context.html  ExternalResultSet.html  FunctionContext.html  ProcedureContext.html  TriggerContext.Action.html  TriggerContext.Type.html  TriggerContext.html  Values.html  ValuesMetadata.html  package-frame.html  package-summary.html  package-tree.html  package-use.html
apidocs/org/firebirdsql/fbjava/class-use/: CallableRoutineContext.html  Context.html  ExternalResultSet.html  FunctionContext.html  ProcedureContext.html  TriggerContext.Action.html  TriggerContext.Type.html  (+3 more)
examples/fbjava-example/: README  pom.xml
examples/fbjava-example/util/: code.sql  createdb.bat  createdb.sh  database.sql  replace-jar.bat  replace-jar.sh  security.sql
src/: pom.xml
src/etc/conf/: fbjava.conf  jvm.args
src/etc/doc/: fbjava.xml
src/etc/scripts/: java-security.sql
src/fbjava/: fbjava-package.launch  pom.xml
src/fbjava-impl/: pom.xml
src/fbjava-tests/: pom.xml
src/java/: fbjava-package.launch  pom.xml
src/native/fbjava/: .gitignore  CMakeLists.txt  fbjava.cpp
src/native/fbjava/include/: ibase.h
(+110 files in other folders)
